k8s/gateway/nginx-echo-service-gateway-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: coffee
